[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/openvr_overlay/interaction/overlay_interaction.gd" type="Script" id=1]
[ext_resource path="res://addons/openvr_overlay/styles/active.theme" type="Theme" id=2]
[ext_resource path="res://addons/openvr_overlay/styles/normal.theme" type="Theme" id=3]
[ext_resource path="res://addons/openvr_overlay/styles/touching.theme" type="Theme" id=4]

[sub_resource type="BoxShape" id=1]
resource_local_to_scene = true
extents = Vector3( 0.2, 0.2, 0.01 )

[sub_resource type="SphereShape" id=2]
radius = 0.03

[node name="OverlayInteraction" type="ARVROrigin"]
script = ExtResource( 1 )
active_theme = ExtResource( 2 )
normal_theme = ExtResource( 3 )
touching_theme = ExtResource( 4 )

[node name="LeftHand" type="ARVRController" parent="."]

[node name="Area" type="Area" parent="LeftHand"]

[node name="CollisionShape" type="CollisionShape" parent="LeftHand/Area"]
shape = SubResource( 1 )

[node name="RightHand" type="ARVRController" parent="."]
controller_id = 2

[node name="StaticBody" type="StaticBody" parent="RightHand"]

[node name="CollisionShape" type="CollisionShape" parent="RightHand/StaticBody"]
shape = SubResource( 2 )

[node name="ARVRCamera" type="ARVRCamera" parent="."]

[node name="Offset" type="RemoteTransform" parent="."]
update_scale = false

[connection signal="body_entered" from="LeftHand/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="LeftHand/Area" to="." method="_on_Area_body_exited"]
